<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


    <item
    android:id="@+id/action_invite"
    android:title="@string/menu_invite"
    android:visible="true"
    app:showAsAction="never"
        />

    <item
        android:id="@+id/action_personal"
        android:title="@string/menu_personal"
        android:visible="true"
        app:showAsAction="never"
        />


    <!--
       //출처: http://iw90.tistory.com/222 [woong's]
    <item
        android:id="@+id/action_personal"
        android:title="@string/menu_personal"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test"
        android:title="@string/menu_test"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_graph"
        android:title="@string/menu_graph"
        android:visible="true"
        app:showAsAction="never" />
        -->


    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_version"
        android:title="@string/menu_version"
        android:visible="true"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_notice"
        android:title="@string/menu_notice"
        android:visible="true"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_exit"
        android:title="@string/menu_exit"
        android:visible="true"
        app:showAsAction="never" />

</menu>
